sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {


var i : Int = 0
for(i <- getNombreValeurs() to 10 ) 
{if(getValeurs(i) < getValeurs(i+1))
echange(i,i+1)}


}
